<resources>
    <string name="app_name">MyBooks</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_me">Mon profil</string>
    <string name="signInMessage">Veuillez vous connecter pour accéder à l\'application</string>
    <string name="monProfil">Mon profil</string>
    <string name="Meslivres">Mes livres</string>
    <string name="RechercherLivre">Rechercher un livre</string>
    <string name="mesDiscussions">Mes discussions</string>
    <string name="texteAchercher">Titre du livre</string>
    <string name="Rechercher">Rechercher</string>
    <string name="title_activity_book">Recherche d\'un livre</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="MonCompte">Mon Compte</string>
    <string name="title_activity_drawer_menu">DrawerMenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_books">Mes livres</string>
    <string name="title_activity_comments">Mes discussions</string>
    <string name="title_activity_finding">Rechercher un livre</string>
    <string name="VoirAmis">Voir ses amis</string>
    <string name="amis">Amis</string>
    <string name="library">Bibliothèque</string>
    <string name="Valider">Valider</string>
    <string name="paramNAme">Nom du paramêtre</string>
    <string name="paramValue">Valeur du paramêtre</string>
    <string name="title_activity_my_friends">MyFriendsActivity</string>
    <string name="title_activity_my_library">MyLibraryActivity</string>
    <string name="Envoyer">Envoyer</string>
    <string name="VotreCom">Votre commentaire</string>
    <string name="EmptyRate">Il n\'y a pas encore de note disponible pour ce livre</string>
    <string name="myFriends">Mes amis</string>
    <string name="pseudoAChercher">Pseudo</string>
</resources>
