<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.schollaert.mybooks.MenuActivity">


    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:theme="@style/ThemeOverlay.MyDarkButton"

        android:drawableBottom="@android:drawable/ic_lock_power_off"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/myCommentButton" />

    <Button
        android:id="@+id/myCommentButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mesDiscussions"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/myBooksButton" />

    <Button
        android:id="@+id/meButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monProfil"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/findBookButton" />

    <Button
        android:id="@+id/findBookButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RechercherLivre"
        android:drawableBottom="?android:attr/actionModeFindDrawable"
        android:layout_alignParentTop="false"
        android:layout_marginTop="25dp"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/myBooksButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/Meslivres"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/meButton" />


</RelativeLayout>

